--- a/index.html
+++ b/index.html
@@ -1,42 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
+
 <body>
     <div class="container">
         <div class="row page-header">
-                <nav class="navbar navbar-expand-lg navbar-light main-navigation">
-                        <a class="navbar-brand main-navigation__logo" href="#">softgray</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                          <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse navigation-wrapper" id="navbarNav">
-                          <ul class="navbar-nav navigation-list">
-                            <li class="nav-item active navigation-item">
-                              <a class="nav-link navigation-item__link" href="#">products<span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item navigation-item">
-                              <a class="nav-link navigation-item__link" href="#">services</a>
-                            </li>
-                            <li class="nav-item navigation-item">
-                              <a class="nav-link navigation-item__link" href="#">about</a>
-                            </li>
-                            <li class="nav-item navigation-item">
-                              <a class="nav-link navigation-item__link" href="#">jobs</a>
-                            </li>
-                            <li class="nav-item navigation-item">
-                                <a class="nav-link navigation-item__link" href="#">contact</a>
-                              </li>
-                              <li class="nav-item navigation-item">
-                                <a class="nav-link navigation-item__link navigation-item__link--phone" href="tel:+81-00-0000-0000">+81-00-0000-0000</a>
-                              </li>
-                          </ul>
-                        </div>
-                      </nav>
+            <nav class="navbar navbar-expand-lg navbar-light main-navigation">
+                <a class="navbar-brand main-navigation__logo" href="#">softgray</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse navigation-wrapper" id="navbarNav">
+                    <ul class="navbar-nav navigation-list">
+                        <li class="nav-item active navigation-item">
+                            <a class="nav-link navigation-item__link" href="#">products<span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item navigation-item">
+                            <a class="nav-link navigation-item__link" href="#">services</a>
+                        </li>
+                        <li class="nav-item navigation-item">
+                            <a class="nav-link navigation-item__link" href="#">about</a>
+                        </li>
+                        <li class="nav-item navigation-item">
+                            <a class="nav-link navigation-item__link" href="#">jobs</a>
+                        </li>
+                        <li class="nav-item navigation-item">
+                            <a class="nav-link navigation-item__link" href="#">contact</a>
+                        </li>
+                        <li class="nav-item navigation-item">
+                            <a class="nav-link navigation-item__link navigation-item__link--phone" href="tel:+81-00-0000-0000">+81-00-0000-0000</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        </div>
+        <div class="main">
+            <div class="row text-center">
+                <div class="col-12 main-wrapper">
+                    <h2 class="main-wrapper__title">
+                        Creative Solutions
+                    </h2>
+                    <p class="main-wrapper__text">
+                       Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Excepturi vitae pariatur doloremque suscipit dolores!<br>Eveniet dicta autem doloremque quibusdam ullam laborum,<br> est, cupiditate eum sit quam minus neque facilis consequatur? 
+                    </p>
+                </div>
+            </div>
         </div>
 </body>
+
 </html>
